--- a/core/templates/core/application.html
+++ b/core/templates/core/application.html
@@ -1,10 +1,12 @@
 {% extends 'core/base.html' %}
 
+
 {% block content %}
+{% include "core/footer.html" %}
 <h1> {{title}}</h1>
 <table>
     <tr>
-      <th>Имя</th>
+      <th>ФИО</th>
       <th>Пол</th>
       <th>Дата рождения</th>
       <th>Телефон</th>
@@ -14,35 +16,35 @@
         <th>
             <ul>
                 {% for a in applicants %}
-                <h4> {{a.name}}</h4>
+                <h4> {{a.name|title}}</h4>
                 {% endfor %}
             </ul>
         </th>
         <th>
             <ul>
                 {% for a in applicants %}
-                <h4> {{a.gender}}</h4>
+                <h4> {{a.gender|default_if_none:"-"}}</h4>
                 {% endfor %}
             </ul>
         </th>
         <th>
             <ul>
                 {% for a in applicants %}
-                <h4> {{a.birth}}</h4>
+                <h4> {{a.birth|default_if_none:"-"|date:"d.m.Y"}}</h4>
                 {% endfor %}
             </ul>
         </th>
         <th>
             <ul>
                 {% for a in applicants %}
-                <h4> {{a.telephone}}</h4>
+                <h4> {{a.telephone|default_if_none:"-"}}</h4>
                 {% endfor %}
             </ul>
         </th>
         <th>
             <ul>
                 {% for a in applicants %}
-                <h4> {{a.health}}</h4>
+                <h4> {{a.health|default_if_none:"-"}}</h4>
                 {% endfor %}
             </ul>
         </th>
