--- a/core/templates/core/appeal.html
+++ b/core/templates/core/appeal.html
@@ -66,7 +66,7 @@
         <th>
             <ul>
                 {% for a in appeals %}
-                <h4> {{a.date|timesince:now}}</h4>
+                <h4> {{a.date|timesince:n}}</h4>
                 {% endfor %}
             </ul>
         </th>
