--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -6,13 +6,9 @@
 <body>
 {% block mainmenu %}
 <ul>
-	{% for m in menu %}
-         {% if not forloop.last %}
-                            <li><a href="{% url m.url_name %}">{{m.title}}</a></li>
-         {% else %}
-                            <li class="last"><a href="{% url m.url_name %}">{{m.title}}</a></li>
-         {% endif %}
-    {% endfor %}
+    <li><a href="{% url 'core:appeal'%}">Обращения</a></li>
+    <li><a href="{% url 'core:applicant'%}">Заявители</a></li>
+    <li><a href="{% url 'core:emergency'%}">Службы</a></li>
 </ul>
 {% endblock mainmenu %}
 {% block content %}
