made work with forms

--- a/core/templates/core/class_based/index.html
+++ b/core/templates/core/class_based/index.html
@@ -1,9 +1,9 @@
-{% extends 'core/base.html' %}
+{% extends 'core/class_based/base.html' %}
 
 
 
 
 {% block content %}
-{% include 'core/footer.html' %}
+{% include 'core/class_based/footer.html' %}
 <h1> {{title}}</h1>
 {% endblock %}
