--- a/core/templates/core/functional/number_of_incidents.html
+++ b/core/templates/core/functional/number_of_incidents.html
@@ -1,8 +1,8 @@
-{% extends 'core/base.html' %}
+{% extends 'core/functional/base.html' %}
 
 
 {% block content %}
-{% include "core/footer.html" %}
+{% include "core/functional/footer.html" %}
 <h1> {{title}}</h1>
 <h4> Количество происшествий - {{incident}}</h4>
 {% endblock %}
