--- a/core/templates/core/functional/appeal.html
+++ b/core/templates/core/functional/appeal.html
@@ -1,8 +1,8 @@
-{% extends 'core/base.html' %}
+{% extends 'core/functional/base.html' %}
 
 
 {% block content %}
-{% include "core/footer.html" %}
+{% include "core/functional/footer.html" %}
 <h1> {{title}}</h1>
 <h3> Среднее количество вызванных служб - {{avg_em.emergency__avg|floatformat}}</h3>
 <table>
