--- a/core/templates/core/class_based/base.html
+++ b/core/templates/core/class_based/base.html
@@ -9,6 +9,9 @@
     <li><a href="{% url 'core:appeal'%}">Обращения</a></li>
     <li><a href="{% url 'core:applicant'%}">Заявители</a></li>
     <li><a href="{% url 'core:emergency'%}">Службы</a></li>
+    <li><a href="{% url 'core:add_appeal'%}">Новое обращение</a></li>
+    <li><a href="{% url 'core:add_applicant'%}">Новый заявитель</a></li>
+    <li><a href="{% url 'core:add_emergency'%}">Новая служба</a></li>
 </ul>
 {% endblock mainmenu %}
 {% block content %}
