--- a/core/templates/core/functional/application.html
+++ b/core/templates/core/functional/application.html
@@ -3,6 +3,7 @@
 
 {% block content %}
 {% include "core/functional/footer.html" %}
+{% include "core/functional/search_applicant.html" %}
 <h1> {{title}}</h1>
 <table>
     <tr>
