--- a/core/templates/core/functional/appeal.html
+++ b/core/templates/core/functional/appeal.html
@@ -3,6 +3,14 @@
 
 {% block content %}
 {% include "core/functional/footer.html" %}
+<form> 
+    <input type="text" name=name class="search" placeholder="Поиск по ФИО">
+    <input type="submit" name="submit" class="submit" value="Поиск">
+    <input type="text" name=code class="search" placeholder="Поиск по коду">
+    <input type="submit" name="submit" class="submit" value="Поиск">
+    <input type="text" name=status class="search" placeholder="Поиск по статусу">
+    <input type="submit" name="submit" class="submit" value="Поиск">
+  </form>
 <h1> {{title}}</h1>
 <h3> Среднее количество вызванных служб - {{avg_em.emergency__avg|floatformat}}</h3>
 <table>
@@ -18,42 +26,42 @@
     <tr>
         <th>
             <ul>
-                {% for a in appeals %}
+                {% for a in appeals.qs %}
                 <h4> {{a.number}}</h4>
                 {% endfor %}
             </ul>
         </th>
         <th>
             <ul>
-                {% for a in appeals %}
+                {% for a in appeals.qs %}
                 <h4> {{a.date|date:"d.m.Y"}}</h4>
                 {% endfor %}
             </ul>
         </th>
         <th>
             <ul>
-                {% for a in appeals %}
+                {% for a in appeals.qs %}
                 <h4> {{a.number_of_victims}}</h4>
                 {% endfor %}
             </ul>
         </th>
         <th>
             <ul>
-                {% for a in appeals %}
+                {% for a in appeals.qs %}
                 <h4> {{a.dont_call|yesno:"да,нет"}}</h4>
                 {% endfor %}
             </ul>
         </th>
         <th>
             <ul>
-                {% for a in appeals %}
+                {% for a in appeals.qs %}
                 <h4> {{a.status}}</h4>
                 {% endfor %}
             </ul>
         </th>
         <th>
             <ul>
-                {% for a in appeals %}
+                {% for a in appeals.qs %}
                 {% for i in a.emergency.all %}
                     <h4>{{i|upper}}</h4> 
                 {% empty %}
@@ -65,7 +73,7 @@
         </th>
         <th>
             <ul>
-                {% for a in appeals %}
+                {% for a in appeals.qs %}
                 <h4> {{a.date|timesince:n}}</h4>
                 {% endfor %}
             </ul>
