--- a/core/templates/core/class_based/application.html
+++ b/core/templates/core/class_based/application.html
@@ -12,52 +12,31 @@
     <input type="submit" name="submit" class="submit" value="Поиск">
   </form>
 <h1> {{title}}</h1>
-<table>
-    <tr>
-      <th>ФИО</th>
-      <th>Пол</th>
-      <th>Дата рождения</th>
-      <th>Телефон</th>
-      <th>Состояние</th>
-    </tr>
-    <tr>
-        <th>
-            <ul>
-                {% for a in filter.qs %}
-                <h4> {{a.name|title}}</h4>
-                {% endfor %}
-            </ul>
-        </th>
-        <th>
-            <ul>
-                {% for a in filter.qs %}
-                <h4> {{a.gender|default_if_none:"-"}}</h4>
-                {% endfor %}
-            </ul>
-        </th>
-        <th>
-            <ul>
-                {% for a in filter.qs %}
-                <h4> {{a.birth|default_if_none:"-"|date:"d.m.Y"}}</h4>
-                {% endfor %}
-            </ul>
-        </th>
-        <th>
-            <ul>
-                {% for a in filter.qs %}
-                <h4> {{a.telephone|default_if_none:"-"}}</h4>
-                {% endfor %}
-            </ul>
-        </th>
-        <th>
-            <ul>
-                {% for a in filter.qs %}
-                <h4> {{a.health|default_if_none:"-"}}</h4>
-                {% endfor %}
-            </ul>
-        </th>
+<table class="table">
+    <thead>
+      <tr>
+        <th scope="col">ФИО</th>
+        <th scope="col">Пол</th>
+        <th scope="col">Дата рождения</th>
+        <th scope="col">Телефон</th>
+        <th scope="col">Состояние</th>
+      </tr>
+    </thead>
+    <tbody>
+        {% for a in applicants.qs %}
+      <tr>
+        <th scope="row">{{a.name|title}}</th>
+        <td>{{ a.gender|default_if_none:"-"}}</td>
+        <td>{{a.birth|default_if_none:"-"|date:"d.m.Y"}}</td>
+        <td>{{a.telephone|default_if_none:"-"}}</td>
+        <td>{{a.health|default_if_none:"-"}}</td>
+      </tr>
+      {% empty %}
+      <h4> Не найдено </h4>
+    {% endfor %}
+    </tbody>
+  </table>
 
-    </tr>
-</table>
+
 
 {% endblock %}
