--- a/core/templates/core/functional/base.html
+++ b/core/templates/core/functional/base.html
@@ -1,20 +1,25 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>{{title}}</title>
-</head>
-<body>
-{% block mainmenu %}
-<ul>
-    <li><a href="{% url 'core:appeal'%}">Обращения</a></li>
-    <li><a href="{% url 'core:applicant'%}">Заявители</a></li>
-    <li><a href="{% url 'core:emergency'%}">Службы</a></li>
-    <li><a href="{% url 'core:add_appeal'%}">Новое обращение</a></li>
-    <li><a href="{% url 'core:add_applicant'%}">Новый заявитель</a></li>
-    <li><a href="{% url 'core:add_emergency'%}">Новая служба</a></li>
-</ul>
-{% endblock mainmenu %}
-{% block content %}
-{% endblock %}
-</body>
+<!doctype html>
+<html lang="ru">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>{{title}}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  </head>
+  <body>
+    {% block mainmenu %}
+    <ul>
+        <li><a href="{% url 'core:appeal'%}">Обращения</a></li>
+        <li><a href="{% url 'core:applicant'%}">Заявители</a></li>
+        <li><a href="{% url 'core:emergency'%}">Службы</a></li>
+        <li><a href="{% url 'core:add_appeal'%}">Новое обращение</a></li>
+        <li><a href="{% url 'core:add_applicant'%}">Новый заявитель</a></li>
+        <li><a href="{% url 'core:add_emergency'%}">Новая служба</a></li>
+    </ul>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    {% endblock mainmenu %}
+    {% block content %}
+    {% endblock %}
+  </body>
 </html>
+
